# bare-minimum-for-tg-bot

./: .env.example  .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_18_1558-1c91972f1857_initial_tables.py
core/: config.py
core/filters/: __init__.py  ban_check.py
core/handlers/users/: start.py  support.py
core/keyboards/: admin_keyboard.py
core/middlewares/: ban.py  log.py
core/routers/: __init__.py  start.py  support.py
core/services/: broadcast.py  format_ban.py
core/utilities/: error_logs.py
database/: __init__.py  crud.py  models.py
filters/: __init__.py  ban_check.py  is_admin.py
handlers/admin/: __init__.py  admin_panel.py  auxiliary_router_for_admin.py
handlers/users/: __init__.py  start.py  support.py
keyboards/: __init__.py  admin_keyboard.py  menu_keyboard.py  support_keyboard.py
middlewares/: __init__.py  ban.py  db_session_middleware.py
services/: __init__.py  add_back_button.py  broadcast.py  const.py  format_ban.py  services_for_support.py
settings/: __init__.py
settings/middlewares/: __init__.py  ban.py  db_session_middleware.py  log.py
src/: alembic.ini  config.py  main.py
src/alembic/: env.py
src/core/filters/: ban_check.py  is_admin.py
src/core/keyboards/: __init__.py  admin_keyboard.py  menu_keyboard.py  support_keyboard.py
src/core/middlewares/: ban.py  db_session_middleware.py  log.py
src/core/services/: const.py  (+5 more)
src/database/: __init__.py  crud.py  models.py
src/settings/: loader.py
utilities/: __init__.py  cmd.py  error_logs.py
(+6 files in other folders)
